--- a/index.ipynb
+++ b/index.ipynb
@@ -106,7 +106,7 @@
     {
      "data": {
       "text/plain": [
-       "[<trip.Trip at 0x10b3d13c8>]"
+       "[<trip.Trip at 0x10d7465c0>]"
       ]
      },
      "execution_count": 4,
@@ -127,7 +127,7 @@
     {
      "data": {
       "text/plain": [
-       "[<trip.Trip at 0x10b3d1320>]"
+       "[<trip.Trip at 0x10d746550>]"
       ]
      },
      "execution_count": 5,
@@ -149,7 +149,7 @@
     {
      "data": {
       "text/plain": [
-       "[<passenger.Passenger at 0x10b53fda0>]"
+       "[<passenger.Passenger at 0x10d73dd30>]"
       ]
      },
      "execution_count": 6,
@@ -171,7 +171,7 @@
     {
      "data": {
       "text/plain": [
-       "[<trip.Trip at 0x10b3d13c8>, <trip.Trip at 0x10b3d14a8>]"
+       "[<trip.Trip at 0x10d7465c0>, <trip.Trip at 0x10d7465f8>]"
       ]
      },
      "execution_count": 7,
@@ -274,6 +274,8 @@
     "lady_gaga = Artist(\"Lady Gaga\")\n",
     "lcd_soundsystem = Artist(\"LCD Soundsystem\")\n",
     "vulfpeck = Artist(\"Vulfpeck\")\n",
+    "madonna = Artist(\"Madonna\")\n",
+    "faith_hill = Artist(\"Faith Hill\")\n",
     "# create as many artists as you'd like"
    ]
   },
@@ -302,6 +304,14 @@
    "outputs": [],
    "source": [
     "from song import Song\n",
+    "poker_face = Song('Poker Face', lady_gaga, pop)\n",
+    "tribulations = Song('Tribulations', lcd_soundsystem, alt)\n",
+    "song_song = Song('Song Song', vulfpeck, country)\n",
+    "like_a_virgin = Song('Like A Virgin', madonna, pop)\n",
+    "vogue = Song('Vogue', madonna, pop)\n",
+    "breathe = Song('Breathe', faith_hill, country)\n",
+    "blab = Song('Body Like a Backroad', faith_hill, funk)\n",
+    "\n",
     "# create song instances and associate them with artists and genres from above \n",
     "# you can make up the songs if you'd like"
    ]
@@ -310,36 +320,111 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_name': 'Poker Face',\n",
+       " '_artist': <artist.Artist at 0x10d73d8d0>,\n",
+       " '_genre': <genre.Genre at 0x10d73d4a8>}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "lady_gaga.songs() # returns a list of songs associated with the given artist (i.e. lady_gaga)"
+    "lady_gaga.songs()\n",
+    "vars((lady_gaga.songs()).pop())\n",
+    "# returns a list of songs associated with the given artist (i.e. lady_gaga)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'_name': 'Alternative'}]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "lcd_soundsystem.genres() # returns a list of genres associated with the given artist (i.e. lcd_soundsystem)"
+    "lcd_soundsystem.genres() # returns a list of genres associated with the given artist (i.e. lcd_soundsystem)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<song.Song at 0x10d75df98>,\n",
+       " <song.Song at 0x10d75df60>,\n",
+       " <song.Song at 0x10d7640b8>]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pop.songs() # returns a list of songs associated with the given genre (i.e. pop)"
+    "pop.songs()# returns a list of songs associated with the given genre (i.e. pop)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_name': 'Poker Face',\n",
+       " '_artist': <artist.Artist at 0x10d73d8d0>,\n",
+       " '_genre': <genre.Genre at 0x10d73d4a8>}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "indie.artists() # returns a list of artists associated with the given genre (i.e. indie)"
+    "(vars(Song.all()[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<artist.Artist at 0x10d73d8d0>,\n",
+       " <artist.Artist at 0x10d73d160>,\n",
+       " <artist.Artist at 0x10d73d160>]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pop.artists() # returns a list of artists associated with the given genre (i.e. indie)"
    ]
   },
   {
